Fixed the spacing on the front page. Next goal: signature.

--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ h1 {
 }
 
 h2 {
-	font-size: 2rem;
+	font-size: 1.5em;
 	font-family: 'argesta_hairlineregular';
 	margin-bottom:1rem;
 	margin-top:1rem;
@@ -89,6 +89,7 @@ background {
 	margin-top: 10rem;
 	margin-bottom: 10rem;
 	box-shadow: 0px 26px 6px 0px rgba(0,0,0,0.48);
+	padding-top: 5%;
 	/* Background Color */
 }
 
@@ -133,15 +134,21 @@ background {
 }
 
 .description{
-	font-family: "argesta_hairlineregular";
-	font-size: 0.75rem;
+	font-family: "argesta_headlineRgIt";
+	font-size: 1rem;
+	font-style: normal;
+	line-height: 3rem;
+	text-align: center;
+	display:block;
+	margin-bottom:0;
+	color: rgb(112, 124, 145);
 }
 
 .letterBody{
 	font-family: "basier_squareregular";
 	font-weight: normal;
 	font-size: 0.75rem;
-	line-height: 1.5em;
+	line-height: 1.5rem;
 	margin-top:0px;
 	color: rgb(112, 124, 145);
 }
@@ -168,7 +175,6 @@ background {
   transform: translate(-50%, -50%);
   height: 160px;
   overflow:hidden;
-
   font-size: 35px;
   line-height: 40px;
 
@@ -181,14 +187,7 @@ background {
 }
 
 .topCard{
-	align-items: center;
-	line-height: 0.8;
-	margin-left: auto;
-	margin-right: auto;
-	display:flex;
-	justify-content: center;
-	height: auto;
-	width:50%;
+
 }
 
 @media(max-width: 875px) {
@@ -202,7 +201,7 @@ background {
 	padding-left: 25%;
 	padding-right: 25%;
 	margin-left: auto;
-margin-top:auto;
+	margin-top:auto;
 	margin-right: auto;
 }
 
@@ -673,6 +672,7 @@ to {
 	font-family: hattonultrabold;
   font-size: 3rem;
   font-style: normal;
+	line-height: 3rem;
 	color: black;
   text-align: center;
   text-transform: uppercase;
